# adventuria-timer

./: .gitignore  Cargo.toml
.github/workflows/: windows-build.yml
src/: config.rs  hotkeys.rs  log.rs  main.rs
src/controllers/: controller.rs  hotkeys.rs  main.rs  mod.rs  timer.rs
src/views/: hotkeys.rs  main.rs  mod.rs  timer.rs  view.rs
