[package]
name = "adventuria-timer"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
global-hotkey = "0.7.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"] }
iced = { version = "0.14.0", features = ["tokio"] }
tray-icon = "0.21.3"
chrono = "0.4.44"
